<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        app:layout_constraintBottom_toTopOf="@id/iv_cover_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/iv_cover_photo"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/quadruple_space"
        android:layout_marginStart="@dimen/sixth_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:srcCompat="@drawable/image_empty" />

    <TextView
        android:id="@+id/tv_create_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_space"
        android:layout_marginEnd="@dimen/quadruple_space"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/detail_sub_title_create"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_cover_photo"
        app:layout_constraintTop_toTopOf="@+id/iv_cover_photo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/amiri_r"
        android:maxLines="1"
        android:text="@string/detail_no_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_views_"
        app:layout_constraintEnd_toEndOf="@+id/tv_create_"
        app:layout_constraintStart_toStartOf="@+id/tv_create_"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_" />

    <TextView
        android:id="@+id/tv_views_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_space"
        android:layout_marginEnd="@dimen/quadruple_space"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/detail_sub_title_views"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_cover_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_create"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_views"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/amiri_r"
        android:maxLines="1"
        android:text="@string/detail_no_content"
        app:layout_constraintBottom_toTopOf="@+id/rating_bar"
        app:layout_constraintEnd_toEndOf="@+id/tv_create_"
        app:layout_constraintStart_toStartOf="@+id/tv_create_"
        app:layout_constraintTop_toBottomOf="@+id/tv_views_" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="@android:style/Widget.Material.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:paddingTop="@dimen/double_space"
        android:paddingBottom="@dimen/double_space"
        android:rating="3"
        android:stepSize="0.1"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="@+id/tv_create_"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/tv_views"/>
    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_x"
        android:ellipsize="end"
        android:fontFamily="@font/amiri_r"
        android:maxLines="1"
        android:text="@string/detail_no_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@+id/rating_bar"
        app:layout_constraintEnd_toEndOf="@+id/tv_create_"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:layout_constraintBottom_toBottomOf="@+id/rating_bar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginStart="@dimen/double_space_x"
        android:layout_marginEnd="@dimen/double_space_x"
        android:layout_marginTop="@dimen/quadruple_space"
        app:layout_constraintTop_toBottomOf="@+id/iv_cover_photo"
        app:layout_constraintBottom_toTopOf="@+id/tv_description_"/>
    <TextView
        android:id="@+id/tv_description_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_space"
        android:layout_marginEnd="@dimen/quadruple_space"
        android:layout_marginTop="@dimen/quadruple_space"
        android:text="@string/detail_sub_title_description"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/double_space_x"
        android:layout_height="10dp"
        android:ems="10"
        android:background="@drawable/shape_dummy_rounded"
        app:layout_constraintStart_toStartOf="@+id/tv_description_"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_" />

    <TextView
        android:id="@+id/tv_description_2"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/double_space_x"
        android:layout_height="10dp"
        android:ems="16"
        android:background="@drawable/shape_dummy_rounded"
        app:layout_constraintStart_toStartOf="@+id/tv_description_"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_description_3"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/double_space_x"
        android:layout_height="10dp"
        android:ems="16"
        android:background="@drawable/shape_dummy_rounded"
        app:layout_constraintStart_toStartOf="@+id/tv_description_"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_2" />

    <TextView
        android:id="@+id/iv_see_more"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_see_more"
        android:gravity="center"
        android:textSize="18sp"
        android:letterSpacing="0.06"
        android:padding="@dimen/double_space_x"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_dark_rounded"
        android:layout_marginBottom="@dimen/sixth_space"
        android:stateListAnimator="@animator/animate_pressed_large_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>